# corewar

./: .gitignore  CMakeLists.txt  Makefile
asm/: 1.s  Makefile  hello.cor  infctn-1.s  test_ldi_1.s  test_zjmp.cor  test_zjmp.s  write_mem.s
asm/include/: .asm.h.swp  asm.h  op.h
asm/src/: dissasembler.c  error_manager.c  parsing_args.c  parsing_labels.c  parsing_oper.c  read_input.c  translator.c
asm/src/libft/: ft_strsplit.c
champs/: 1.s  loop.cor  loop.s  marcher.s  test_add.s  test_and.s  test_lld_reg.s  test_zjmp.cor  test_zjmp.s  write_mem.cor
headers/: op.h  ops.h  vm.h
resources/: op.c  op.h
scripts/: asm_comparator.sh  corewar_checker.sh  corewar_diff.sh  dasm_comparator.sh
src/: main.c
tmp/: a.txt  b.txt
vis/: index.html  main.py  requirements.txt  style.css
vis/js/: byte.js  dom.js  proc.js  sketch.js  utils.js  vm.js
vm/: commands.c  commands_math.c  commands_reg1.c  commands_reg2.c  endian_conversion.c  free.c  loader.c  op.c  operation.c  operation1.c  parse_args.c  proc.c  state_writer.c  vm.c  vm2.c  vm_main.c
